ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  catalog_mapping
      prefix: /
      host: catalog.23.101.20.50.xip.io
      service: http://catalog-service
spec:
  ports:
  - name: catalog
    port: 80
