mongo-deployment-no-persistence.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
    tier: mongodb
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
        tier: mongodb
    spec:
      containers:
      - image: mongo:3.6
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
