catalog-service-ingress.yaml
--- # Azure add on http routing ingress. 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catalog-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: catalog.4b283f3f58a749c38a6f.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: catalog-service
          servicePort: 3000  
--- # Certificate for Ingress
apiVersion: certmanager.k8s.io/v1alpha1
kind: Certificate
metadata:
  name: catalog-tls-secret
spec:
  secretName: catalog-tls-secret
  dnsNames:
  - catalog.ishirock.com
  acme:
    config:
    - http01:
        ingressClass: nginx
      domains:
      - catalog.ishirock.com
  issuerRef:
    name: letsencrypt-prod
    kind: ClusterIssuer
--- # Custom Ingress on nginx 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catalog
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - catalog.ishirock.com
    secretName: catalog-tls-secret
  rules:
  - host: catalog.ishirock.com
    http:
      paths:
      - path: /
        backend:
          serviceName: node-catalog-service
          servicePort: 80
